# slowpoke-telegram

./: .gitignore  Cargo.toml  README.md  merge_script.py
.github/workflows/: ci.yml
docker/: Dockerfile_local  Dockerfile_master  Dockerfile_release
migration_scripts/: README.md  migration_script.py  revert_migration_script.py
src/: commands.rs  db.rs  detection.rs  main.rs  parameters.rs  settings_db.rs  utils.rs  webhook.rs
