[package]
name = "slowpoke-telegram"
version = "0.2.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
bincode = "1.3.3"
chrono = "0.4.19"
log = "0.4.17"
once_cell = "1.11.0"
once-cell-regex = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sled = "0.34.7"
sqlx = { version = "0.5.13", features = [ "macros", "runtime-tokio-native-tls", "sqlite" ] }
teloxide =  { version = "0.9.0", features = ["auto-send", "macros"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["add-extension", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
url = "2.2.2"

[profile.release]
lto = true
