[package]
name = "slowpoke-telegram"
version = "0.2.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
bincode = "1.3.3"
chrono = "0.4.22"
log = "0.4.17"
once_cell = "1.15.0"
once-cell-regex = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sled = "0.34.7"
sqlx = { version = "0.6.2", features = [ "macros", "runtime-tokio-native-tls", "sqlite" ] }
teloxide =  { version = "0.10.1", features = ["auto-send", "macros"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.10"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
url = "2.3.1"

[profile.release]
lto = true
